unpackaged/objects/Vice_Rector_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Comment_Date__c</fullName>
        <label>Comment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vice Rector Comments</relationshipLabel>
        <relationshipName>Vice_Rector_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Vice Rector Comment</label>
    <nameField>
        <displayFormat>VRC-{0000000000}</displayFormat>
        <label>Vice Rector Comment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vice Rector Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>